--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "bootstrap": "^5.2.3",
     "history": "^5.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.0.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-loading": "^2.0.3",
-    "react-router-dom": "6.0.0-beta.8",
+    "react-router-dom": "^6.4.5",
     "react-spinners": "^0.13.4"
   },
   "scripts": {
@@ -18,6 +18,12 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "optimization": {
     "scripts": true,
